hw12 coding part finish

--- a/SI140A-hw12/HW12-sol.tex
+++ b/SI140A-hw12/HW12-sol.tex
@@ -91,11 +91,11 @@
 %   - Name
 %   - Student ID
 
-\newcommand{\hmwkTitle}{Homework\ \#01}
+\newcommand{\hmwkTitle}{Homework\ \#12}
 \newcommand{\hmwkClass}{Probability \& Statistics for EECS}
-\newcommand{\hmwkDueDate}{Feb 19, 2023}
-\newcommand{\hmwkAuthorName}{Ming Xiao}
-\newcommand{\hmwkAuthorID}{12345678}
+\newcommand{\hmwkDueDate}{May 7, 2023}
+\newcommand{\hmwkAuthorName}{Wang Penghao}
+\newcommand{\hmwkAuthorID}{2021533138}
 
 
 %
@@ -144,70 +144,39 @@
 
 \begin{homeworkProblem}[1]
 
-\begin{enumerate}
-    % inline
-    \item 
-    \( f(n) \)
-    
-    \item
-    $ f(n) $
-    
-    \item
-   	\begin{math}
-   		f(n)
-    \end{math}
-    
-    % Display mode
-    \item
-    \[
-    	f(n)
-    \]
-    
-    \item 
-    $$ 
-    	f(n)
-    $$
-    
-    \item
-    \begin{equation}
-        	f(n)
-    \end{equation}
-\end{enumerate}
+
 
 \end{homeworkProblem}
 
+\newpage
+
 \begin{homeworkProblem}[2]
 
-\begin{enumerate}
-	% alignment
-	\item
-    \[
-    	\begin{split}
-	    		n^{2} + n + 1 
-	    		\le ~& n^{2} + n^{2} + n^{2} \\
-	    		= ~& 3 n^{2} \\
-	    		\le ~& c \cdot 2 n^{3}
-	    	\end{split}
-    \]
+
+
+\end{homeworkProblem}
+
+\newpage
+
+\begin{homeworkProblem}[3]
     
-    \item
-    \begin{equation}
-    	\begin{aligned}
-	    		n^{2} + n + 1 
-	    		\le ~& n^{2} + n^{2} + n^{2} \\
-	    		= ~& 3 n^{2} \\
-	    		\le ~& c \cdot 2 n^{3}
-		\end{aligned}
-	\end{equation}
-	
-	\item
-	\begin{align}
-	    	n^{2} + n + 1 
-	    	\le ~& n^{2} + n^{2} + n^{2} \\
-	    	= ~& 3 n^{2} \\
-	    	\le ~& c \cdot 2 n^{3}
-	\end{align}
-\end{enumerate}
+
+
+\end{homeworkProblem}
+
+\newpage
+
+\begin{homeworkProblem}[4]
+    
+
+
+\end{homeworkProblem}
+
+\newpage
+
+\begin{homeworkProblem}[5]
+    
+
 
 \end{homeworkProblem}
 
